fix: mobile view not showing some elements

--- a/src/app/components/Project.css
+++ b/src/app/components/Project.css
@@ -19,15 +19,3 @@
     opacity: 0;
     transition: max-height 300ms ease-in-out, opacity 300ms ease-in-out;
   }
-
-@media (max-width: 768px) {
-  .grid {
-    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
-  }
-}
-
-@media (max-width: 480px) {
-  .grid {
-    grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
-  }
-}
